# AgentMesh

./: .gitignore  .pre-commit-config.yaml  GOVERNANCE_GUIDE.md  QUICKSTART.md  README.md  docker-compose.yaml  docker-compose.yml  init-postgres.sql  pyproject.toml
adapters/knowledge_base/: base.py  config.py  exceptions.py  registry.py  schemas.py
adapters/knowledge_base/neo4j/: adapter.py  config.yaml  docker-compose.yaml  operations.py
adapters/messaging/: __init__.py  nats_client.py
adapters/persistence/: __init__.py  base.py  exceptions.py  schemas.py
adapters/policy/: __init__.py  opa_client.py
api/: __init__.py  generate_grpc.py  grpc_server.py  rest_server.py
api/protos/: __init__.py  connection_service.proto
db/: README.md
db/persistence/: init-sqlite.sql
docs/: ARCHITECTURE.md  DEMO.md  GOVERNANCE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERSISTENCE_UPDATE.md  POLICY_MANAGEMENT.md  SETUP.md  THINKING.md
dummy_agents/: README.md  VERIFICATION.md  __init__.py  base.py  client_examples.py  generate_grpc.py  grpc_server.py  rest_server.py  run_all.sh  simple_nats_agent.py
dummy_agents/agents/: autonomous_openai_agent.py  crewai_agent.py  langraph_agent.py  lyzr_agent.py  openai_agent.py
dummy_agents/protos/: __init__.py  agent_service.proto  agent_service_pb2.py  agent_service_pb2_grpc.py
examples/: __init__.py  policy_management_example.py  sample_agent.py  setup_demo_data.py  test_nats_basic.py  test_policy_persistence.py  test_routing_with_opa.py  verify_policy_management.py
mcp_server/: __init__.py  server.py
policies/: README.md  agentmesh.rego
scripts/: start_agentic_test_env.sh  start_mesh_with_opa.sh
sdk/: __init__.py  agent_client.py
services/: __init__.py
services/bootstrap/: __init__.py  mesh_service.py
services/connection/: __init__.py  connection_service.py  schemas.py
services/directory/: __init__.py  subscriber.py
services/enforcement/: __init__.py  enforcement_service.py  exceptions.py
services/registry/: __init__.py  agent_service.py  directory_service.py  exceptions.py  health_service.py  kb_service.py  schemas.py
services/routing/: __init__.py  request_router.py  schemas.py
submission/: EVALUATION_MAPPING.md  INDEX.md  SUBMISSION_SUMMARY.md  SUBMISSION_VERIFICATION.md
submission/examples/: README.md  scenario1_privacy.py  scenario3_discovery.py
tests/: run_integration_test.py  test_agent_mesh_connection.py
tests/adapters/: test_opa_policy_management.py
tests/scenarios/: test_1_registration_discovery.py  test_2_policy_enforcement.py  test_3_agent_invocation.py  test_3_agent_invocation_agentic.py  test_4_realtime_notifications.py  test_5_kb_request_reply.py  test_6_metadata_audit_queries.py  test_7_autonomous_multi_source.py  test_7_multi_source_query.py  test_8_edge_cases.py
tests/scenarios_agentic/: AGENTIC_PROOF.md  IMPLEMENTATION_COMPLETE.md  README.md  SCENARIO_2_RESULTS.md  SCENARIO_6_IMPLEMENTATION.md  SCENARIO_6_SETUP.md  SCENARIO_6_STATUS.md  SETUP.md  TESTING_GUIDE.md  TEST_EXECUTION_COMPLETE_2025_10_16.txt  TEST_EXECUTION_RESULTS_2025_10_16.txt  __init__.py  check_prerequisites.sh  run_scenario_2.sh  run_scenario_6.sh  test_1_registration_discovery_agentic.py  test_2_policy_enforcement_agentic.py  test_4_realtime_notifications_agentic.py  test_5_RESULTS.md  test_5_kb_request_reply_agentic.py  test_6_metadata_audit_agentic.py  verify_setup.py
(+29 files in other folders)
